kitten/reported_bugs/rust/rust-83531/stderr.txt
error[E0412]: cannot find type `VTable` in this scope

 --> mutant.rs:4:15

  |

4 | b : & 'static VTable ,

  |               ^^^^^^ not found in this scope



error[E0658]: unions with non-`Copy` fields other than `ManuallyDrop<T>` are unstable

 --> mutant.rs:4:1

  |

4 | b : & 'static VTable ,

  | ^^^^^^^^^^^^^^^^^^^^

  |

  = note: see issue #55149 <https://github.com/rust-lang/rust/issues/55149> for more information

  = help: add `#![feature(untagged_unions)]` to the crate attributes to enable



error: internal compiler error: compiler/rustc_mir/src/interpret/eval_context.rs:188:17: The type checker should prevent reading from a never-written local



thread 'rustc' panicked at 'Box<Any>', /rustc/52e3dffa50cfffdcfa145c0cc0ba48b49abc0c07/library/std/src/panic.rs:59:5

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.53.0-nightly (52e3dffa5 2021-03-25) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [eval_to_allocation_raw] const-evaluating + checking `Bar::Boo::{constant#0}`

#1 [eval_to_const_value_raw] simplifying constant for the type system `Bar::Boo::{constant#0}`

end of query stack

error: aborting due to 3 previous errors



Some errors have detailed explanations: E0412, E0658.

For more information about an error, try `rustc --explain E0412`.

